# ws-epaper-api

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
emulate/: README.md  emulate.h
examples/: CMakeLists.txt
examples/01 - Basics/: 01_basics.cpp  CMakeLists.txt
examples/02 - Color/: 02_color.cpp  CMakeLists.txt
examples/03 - Emulating Physical Displays/: 03_emulating_physical_displays.cpp  CMakeLists.txt
examples/03 - Physical Displays/: 03_physical_displays.cpp  CMakeLists.txt
examples/04 - Text/: 04_text.cpp  CMakeLists.txt
examples/05 - Rotate Display/: 05_rotate_display.cpp  CMakeLists.txt
examples/06 - Drawing Images/: 06_drawing_images.cpp  CMakeLists.txt
examples/07 - Real World Example/: 07_real_world_example.cpp  CMakeLists.txt
examples/08 - Element Showcase/: 08_element_showcase.cpp  CMakeLists.txt
examples/09 - Custom Elements/: 09_custom_elements.cpp  CMakeLists.txt
examples/10 - Canvas Element/: 10_canvas_element.cpp  CMakeLists.txt
include/: buffers.h  bufferutils.h  debug.h  elements.h  epaperapi.h  utils.h  wsepaperapi.h
include/bitmaps/: AbstractBitmap.h  Bluetooth.h  Check.h  Cross.h  Gear.h  Lightning.h  Moon.h  Star.h  Wifi.h
include/elements/: Bitmap1BitElement.h  BitmapElement.h  CanvasElement.h  FilledRectangleElement.h  LineElement.h  ProgressBarElement.h  RectangleElement.h  TextElement.h
include/fonts/: AbstractFont.h  AllFonts.h  CourierPrime_12pt.h  CourierPrime_14pt.h  CourierPrime_16pt.h  CourierPrime_8pt.h  DinaBold_10pt.h  DinaBold_8pt.h  DinaBold_9pt.h  DinaItalicBold_10pt.h  DinaItalicBold_8pt.h  DinaItalicBold_9pt.h  DinaItalic_10pt.h  DinaItalic_8pt.h  DinaItalic_9pt.h  Dina_10pt.h  Dina_6pt.h  Dina_8pt.h  Dina_9pt.h  HaxorNarrow_15pt.h  RobotoBlack_24pt.h  Roboto_12pt.h  Roboto_14pt.h  Roboto_16pt.h  Roboto_24pt.h  Simple_9px.h  Unifont_14pt.h  Unifont_16pt.h
lib/: CMakeLists.txt  README.md  buffers.cpp  debug.cpp  elements.cpp  epaperapi.cpp  epaperlib.cpp  wsepaperapi.cpp
scripts/: README.md
scripts/bitmapconversion/: Bitmap2HeaderFile.py  Bitmap2HeaderFiles.py  README.md
scripts/capabilitiesparser/: Generate.py  Parse.py  README.md  Utils.py  common.py  prompt.txt
scripts/capabilitiesparser/helpers/: ClassBuilder.py  EPaperDetails.py  Generator.py  logging.py
scripts/capabilitiesparser/helpers/generators/: Black1BitEPDGenerator.py  Black2BitEPDGenerator.py  Color2BitEPDGenerator.py  RedBlack1BitEPDGenerator.py  _6Color4BitEPDGenerator.py  _7Color4BitEPDGenerator.py  __init__.py
scripts/fontmaking/: CreateEmpty.py  Font2Images.py  Images2FontHeaders.py  README.md  common.py
sdl_testing/: README.md  main.cpp  sdl.cpp  sdlsetup.h
tests/: CMakeLists.txt  README.md  all_draw_targets_build.cpp
